--- a/src/main.html
+++ b/src/main.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"> , <!-- set meta tags data and include the CSS and JS files. -->
+    <meta charset="UTF-8"> <!-- set meta tags data and include the CSS and JS files. -->
     <meta name="author" content="Aleksandr Stinchcomb">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="description" content="An informative practice website about the U.S. Constitution">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="javascript/code.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="javascript/code.js" defer></script>
+    <link type="text/css" rel="stylesheet" href="style.css">
     <title>Constitution</title>
 </head>
-<body">
-    <img id="banner">
+<body>
+    <img id="banner" src="null" alt="">
     <div id="header">
         <h1>The U.S. Constitution</h1>
         <nav id="links">
@@ -39,7 +39,7 @@
         </div>
         <br> <!-- Break a line so we don't have to worry about padding  -->
         <hr class="divider">
-        <iframe src="resources/pages/constitution.html" id="content" name="content" sandbox="allow-scripts allow-same-origin" allowfullscreen=false scrolling="no"\>
+        <iframe src="resources/pages/constitution.html" id="content" name="content"></iframe>
     </div>
 </body>
 </html>
